fix: change spacing

--- a/styles/Contract.module.scss
+++ b/styles/Contract.module.scss
@@ -29,7 +29,7 @@ Sass for contract page
   top: 0;
   right: 0;
   padding-top: 30px;
-  padding-right: 10px;
+  padding-right: 50px;
 }
 
 .toggleDrawer {
@@ -40,5 +40,5 @@ Sass for contract page
 
 .toggleFont {
   font-size: 70px;
-  padding-left: 10px;
+  padding-left: 50px;
 }
